<resources>
    <string name="app_name">Gema_Login_Register</string>
    <string name="profil_saya">Profil Saya </string>
    <string name="konten_1">Penulis: M. Iskandar Rasyid
                            32 Halaman
                            Tahun Terbit: 2021  </string>
    <string name="konten_2">Penulis: Dwi Silvira
                            21 Halaman
                            Tahun Terbit: 2021  </string>
    <string name="konten_3">Penulis: Rafika Daulay
                            15 Halaman
                            Tahun Terbit: 2021  </string>
    <string name="konten_4">Penulis: Hadratin Agusti Susanto
                            37 Halaman
                            Tahun Terbit: 2021  </string>
    <string name="tentang_bumi">
        Ilmu bumi dan antariksa adalah ilmu yang  mempelajari tentang bumi dan
        segala  komponen penyusunnya dan
        posisinya sebagai salah satu planet atau bagian dari
        tata surya serta mempelajari benda-benda angkasa yang lainnya.  </string>
    <string name="tentang_roket">
        Rangka atau badan roket (rocket frame) terbuat dari bahan yang ringan dan kuat seperti titanium dan
        aluminium karena rangka berfungsi sebagai pelindung.   </string>
    <string name="tentang_profesi">
        Penelitian yang dilakukan oleh Nature Publishing Group dengan judul Earliest Evidence of Dental
        Caries Manipulation in The Late Upper Palaeolithic
        pada tengkorak berusia 14.000 tahun atau pada zaman paleolitikum akhir
        menemukan bahwa terdapat satu gigi busuk di rahang yang sengaja digosok dan digores dengan alat.
        Penemuan tersebut menjadikan dokter gigi sebagai salah satu profesi tertua yang telah terbukti.
    </string>
    <string name="tentang_hewan">
        Ikan bisa merasa haus dan harus minum dari laut atau habitatnya.
        Ikan menggunakan insang dan kulitnya untuk membuang air.
        Caranya, dengan mengendalikan kadar garam dalam tubuhnya.
        Tubuh ikan laut kurang asin daripada air laut,
        sedangkan tubuh ikan air tawar lebih asin daripada air tempat mereka hidup (sungai dan danau).
        Ikan laut bertulang terus-menerus kehilangan air dari tubuhnya, melalui proses yang disebut osmosis.
        Di dalam tubuh ikan laut, konsentrasi garamnya lebih rendah dibandingkan lingkungannya.
        Sehingga ia bisa kehilangan air di dalam tubuhnya.
        Oleh karena itu, ikan harus menghidrasi tubuh dengan minum.
    </string>
    <string name="tentang_matahari">
        Mengapa matahari berubah menjadi jingga saat senja?
        Dilansir dari National Geographic Indonesia, seorang ahli meteorologi dari
        Australia bernama Adam Morgan mengatakan bahwa ketika terbit dan terbenam,
        matahari sedang berada di posisi rendah pada cakrawala. Ketika berada di posisi ini,
        sinar matahari harus melewati berlapis-lapis atmosfer untuk bisa terlihat oleh mata manusia.
        Nah, pada saat sinar matahari menabrak lapisan atmosfer, cahayanya akan terhambur.
        Penghamburan cahaya ini juga dipengaruhi oleh beberapa hal, di antaranya debu, asap,
        dan partikel lain yang berada di udara. Partikel-partikel inilah yang menimbulkan hamburan cahaya
        akibat pemantulan yang terjadi ketika sinar matahari mencapai bumi.
    </string>
    <string name="tentang_astronot">
        Para astronot dilarang makan makanan berjenis kacang-kacangan sebelum pergi ke luar angkasa.
        Karena bisa menyebabkan mereka mudah kentut.
        Dan gas kentut sangat membahayakan bagi baju luar angkasa mereka.
    </string>
    <string name="tentang_hewan2">
        Meski tidak bisa berjalan di atas tanah,
        hummingbird satu-satunya bangsa burung yang bisa terbang sambil mundur.
    </string>
    <string name="TentangKami">

        Gema adalah sebuah aplikasi mobile yang menjadi media untuk menyediakan beragam jenis
        buku cerita anak yang dikemas secara menarik dengan
        fitur-fitur lucu untuk membantu menciptakan lingkungan yang positif dalam hal
        meningkatkan literasi pada anak. Melalui fitur-fitur yang ada,
        diharapkan dapat meningkatkan minat baca serta daya analisa pada anak.
    </string>
    <string name="KategoriBuku">
        Kamu dapat memilih untuk membaca buku berdasarkan kategori buku yang tersedia.
            Berbagai pilihan buku menarik dapat kamu baca di Gema.
    </string>
    <string name="Pustaka">
        Di pustaka, kamu dapat menyimpan beberapa buku yang ingin kamu baca dikemudian hari.
            Kamu juga dapat menyimpan dan mengoleksi buku favorite kamu.
    </string>
    <string name="Quiz">
        Di aplikasi Gema ini juga tersedia quiz yang pastinya seru untuk di kerjakan.
            kamu bisa mengerjakan quiz setelah kamu selesai membaca buku favorite mu.
            ada juga quiz essai yang dapat meningkatkan daya analisis mu.
    </string>
    <string name="TargetBaca">
        Kamu bisa menuliskan target buku yang ingin kamu baca dalam seminggu. di fitur target baca ini.
            jangan lupa untuk hidupkan pengingat harian ya biar kamu tidak terlewat untuk membaca hari ini
    </string>
    <string name="Deskripsi">
        Kamu mungkin sudah tidak asing lagi dengan bumi, bintang dan ruang angkasa.
            Namun kamu tau tidak bahwa luar angkasa memiliki berbagai
            fakta menarik yang tidak semua tau. yuk baca bukunya
    </string>
    <string name="Danau_toba_hal1">
        Pada suatu hari, ada seorang pemuda bermana Toba sedang memancing ikan.
        Umpan yang sudah lama dia lempar akhirnya dimakan seekor ikan.
        Betapa terkejutnya dia ketika melihat seekor ikan mas bersisik emas yang telah dia dapat.

        Akhirnya Toba yang merasa bahagia pulang ke rumah, tetapi sayangnya
        semua kayu bakardi rumahnya sudah habis.
        Dia menyimpan ikan itu di dalam wadah besar dan mencari kayu bakar.

        Toba pulang dengan membawa kayu bakar, sayangnya ikan itu menghilang,
        dia hanya menemukan wadah yang berisi koin emas. Ketika dia masuk ke dalam kamarnya ada
        seorang wanita cantik yang sedang menyisir rambutnya
    </string>
    <string name="Danau_toba_hal2">
        Wanita itu akhirnya menjadi istrinya, tetapi dengan satu syarat,
        yaitu tidak boleh mengungkit asal usul dia yang merupakan penjelmaan dari ikan.

        Mereka dikaruniai anak laki-laki bernama Samosir.
        Setiap hari Toba bekerja banting tulang untuk mereka berdua,
        namun Samosir malah menjadi anak yang nakal dan pemalas.

        Suatu ketika Samosir diminta untuk mengantarkan makanan untuk ayahnya,
        bukannya langsung pergi ke ladang, dia malah main bersama teman-teman lainnya. B
        ahkan karena merasa lapar dia memakan makanan itu.

        Toba yang yang sangat lapar menunggu tidak kunjung datang makan siang yang dia harapkan.
    </string>
    <string name="Danau_toba_hal3">
        Samosir pun tiba,  tetapi Toba sangat marah karena anaknya telah menghabiskan semua makanan
        untuknya.

        Toba yang marah memukul Samosir mengucapkan kalimat ‘dasar anak ikan, kepadanya.
        Kemudian dia mengadukan itu kepada Ibunya, dan ibunya memerintahkan Samosir untuk naik ke atas bukit, karena Toba sudah melanggar janji untuk tidak mengungkin masa lalu ibunya.

        Air bah yang sangat deras membanjiri daerah itu, ibunya melompat ke dalamnya dan menjadi ikan kembali.
        Ayahnya yang tidak sempat menyelamatkan diri pun ikut tenggelam.
    </string>
    <string name="Danau_toba_hal4">
        Samosir berubah menjadi pulau yang diberinama pulau samosir di kelilingi
        danau yang diberinama Danau Toba.

        Sumber: penuliscilik.com
        Tag:  danau toba, pulau samosir, sumatera utara
    </string>
    <string name="cba_hal2">
        istri buaya makan buah-buahan dan menyukainya,
        namun dia tidak suka suaminya menghabiskan waktu bersama monyet.
        Dia memberi tahu suaminya, “Buahnya sepat dan tidak enak,
        saya membayangkan betapa manisnya hati monyet itu. Berikan aku jantung monyet.”

        Buaya itu tidak mau membunuh temannya, tetapi tidak punya pilihan karena dia juga menyayangi istrinya.

        Keesokan harinya, dia mengundang monyet ke rumahnya untuk makan malam dengan alasan
        istrinya ingin bertemu dengannya.

        Monyet itu senang dan ingin datang, tetapi dia tidak bisa berenang,
        jadi buaya membawanya di punggungnya.
    </string>
    <string name="cba_hal3">
        Buaya itu senang bahwa dia telah menipu monyet itu, namun,
        diperjalanan dia mengatakan alasan sebenarnya untuk membawa pulang monyet
        itu untuk mengambil jantunya.

        Monyet pintar itu berkata, “Seharusnya kamu memberi tahu saya sebelumnya,
        saya meninggalkan jantung saya di pohon. Kita harus kembali dan mengambilnya. “

        Buaya percaya padanya dan membawanya kembali ke pohon.

        Sesampainya di pohon monyet segera memanjat dan menyelamatkan hidupnya.

    </string>
    <string name="cba_hal4">
        Alkisah, hiduplah seekor bangau yang biasa mengambil ikan dari danau.
        Namun, seiring bertambahnya usia, ia kesulitan menangkap seekor ikan.

        Untuk memberi makan dirinya sendiri, dia memikirkan sebuah rencana.

        Dia memberi tahu ikan, katak, dan kepiting, bahwa dia mendengar beberapa manusia
        berencana untuk mengeringkan danau dan bercocok tanam disana. Oleh karenanya,
        tidak akan ada ikan dan kehidupan di Danau.

        Dia juga mengatakan kepada mereka betapa sedihnya dia tentang hal ini dan bahwa dia
        akan merindukan mereka semua.
    </string>
    <string name="cba_hal5">
        Para ikan sedih dan meminta bangau membantu mereka.

        Bangau berjanji untuk membawa mereka semua ke Danau yang lebih besar.

        Namun, dia mengatakan kepada mereka, “Karena saya sudah tua,
        saya hanya bisa membawa beberapa dari kalian untuk satu kali perjalanan.”

        Bangau memiliki niat licik akan membawa ikan ke batu, membunuh mereka, dan memakannya.
        Setiap kali dia lapar, dia akan membawa beberapa dari mereka ke batu dan memakannya.

        Hiduplah seekor kepiting di kolam, yang ingin pergi ke kolam yang lebih besar juga.
    </string>
    <string name="cba_hal6">
        Bangau itu berpikir untuk memakan kepiting sebagai ganti dan setuju untuk membantunya.

        Di perjalanan, kepiting bertanya kepada bangau, “Di mana kolam besar itu?”

        Bangau itu tertawa dan menunjuk ke batu, yang penuh dengan tulang ikan.
        Kepiting menyadari bahwa bangau itu akan membunuhnya, dan
        dengan cepat memikirkan rencana untuk menyelamatkan dirinya sendiri.

        Dia menjepit leher bangau dan tidak melepaskannya sampai bangau itu mati.
    </string>
    <string name="cba_hal7">
        Pasangan petani memiliki luwak hewan peliharaan. Suatu hari, petani dan
        istrinya harus segera keluar rumah untuk bekerja, dan mereka meninggalkan luwak dengan bayi mereka.

        Mereka yakin bahwa si Luak akan menjaga bayi mereka dengan baik. Sementara mereka pergi,
        seekor ular diam-diam memasuki rumah dan bergerak menuju tempat tidur untuk menyerang bayi itu.

        Si luwak yang pintar bertarung dan membunuh ular itu untuk melindungi bayinya.
    </string>
    <string name="cba_hal8">
        Ketika istri petani itu kembali ke rumah, dia terkejut disambut oleh
        noda darah di mulut dan gigi luwak itu.

        Dia kehilangan kesabaran dan berteriak, “Kamu membunuh bayiku!” Dalam amarahnya,
        dia kehilangan semua kendali dan membunuh luwak yang setia.

        Ketika dia memasuki rumahnya, dia melihat bayinya masih hidup, dan ular mati di sampingnya.
        Dia menyadari apa yang terjadi dan menyesali tindakannya.

        Sumber: dongengceritarakyat.com
        Tag: dongeng anak, fabel, hewan

        -
    </string>
</resources>