<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_all"
    tools:context=".BacaBuku.BacaBukuCeritaBinatangAsyik">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/ic_baseline_arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-25dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="Cerita Binatang Asyik"
            android:textColor="#232D37"
            android:textSize="16dp"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="135dp"
            app:srcCompat="@drawable/see" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="100"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="-18dp"/>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="185dp"
            android:layout_marginTop="-17dp"
            app:srcCompat="@drawable/list" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="8"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="-18dp"/>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="225dp"
            android:layout_marginTop="-16dp"
            app:srcCompat="@drawable/u_star" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4/5"
            android:layout_marginLeft="240dp"
            android:layout_marginTop="-18dp"/>

        <ImageView
            android:layout_width="300dp"
            android:layout_height="250dp"
            android:src="@drawable/cerita_binatang_asyik2"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="50dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="-20dp"
            android:fontFamily="@font/poppinsbold"
            android:text="1. Monyet dan Buaya"
            android:textColor="#000"
            android:textSize="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/Danau_toba_hal1"
            android:textColor="#000"
            android:textSize="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="390dp"
            android:layout_marginBottom="-20dp"
            android:fontFamily="@font/poppinsbold"
            android:text="1"
            android:textColor="#000"
            android:textSize="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/cba_hal2"
            android:textColor="#000"
            android:textSize="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="390dp"
            android:layout_marginBottom="-20dp"
            android:fontFamily="@font/poppinsbold"
            android:text="2"
            android:textColor="#000"
            android:textSize="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/cba_hal3"
            android:textColor="#000"
            android:textSize="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="390dp"
            android:layout_marginBottom="-20dp"
            android:fontFamily="@font/poppinsbold"
            android:text="3"
            android:textColor="#000"
            android:textSize="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="-20dp"
            android:fontFamily="@font/poppinsbold"
            android:text="2. Bangau dan Kepiting"
            android:textColor="#000"
            android:textSize="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/cba_hal4"
            android:textColor="#000"
            android:textSize="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="390dp"
            android:layout_marginBottom="-20dp"
            android:fontFamily="@font/poppinsbold"
            android:text="4"
            android:textColor="#000"
            android:textSize="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/cba_hal5"
            android:textColor="#000"
            android:textSize="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/cba_hal6"
            android:textColor="#000"
            android:textSize="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="-20dp"
            android:fontFamily="@font/poppinsbold"
            android:text="3. Luwak Setia"
            android:textColor="#000"
            android:textSize="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/cba_hal7"
            android:textColor="#000"
            android:textSize="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/cba_hal8"
            android:textColor="#000"
            android:textSize="12dp" />

        <Button
            android:id="@+id/btn_selesai_membaca"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:background="@drawable/color_button_2"
            android:fontFamily="@font/poppins_semibold"
            android:text="Selesai Membaca"
            android:textSize="14dp"
            android:textColor="#FFFEFE"/>

    </LinearLayout>
</ScrollView>